	set the defaults for the arguments of the windows() device.

    o	The windows() device has a new argument 'title' to set the
	title of the window.

    o	The windows() device no longer sizes the window to allow for
	scrollbars that might be needed for rescale="fixed", which
	means the default size really is 7 inches square and not 7.177
	inches.


BUILDING R

    o	Support for the ACML BLAS has been withdrawn (there is no
	version of ACML 4.0.0 for gcc under Windows, and none at all
	for gfortran).

    o	We now presume version 2.7.0 of Rtools.exe, in which gcc is
	version 4.2.1.

    o	We now assume Tcl/Tk version 8.5.x.



	**************************************************
	*						 *
	*	       2.6 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.6.1 patched

WORKAROUNDS

    o	We set some environment variables to work around hangs in Rgui
	when packages (e.g. tseries) use Fortran WRITE calls.  The
	Fortran output will be written to a file named 'fort.6' in the
	working directory.

    o	Browsing for a directory in choose.dir() and the Rgui
	'Change Dir...' menu item now works around Vista's confusion
	about 'desktop' by starting at 'Computer' on Vista/Server 2008.


BUG FIXES

    o	If a graphics window was opened in MDI mode while the console
	was zoomed, it would not be initialized properly.



		CHANGES IN R VERSION 2.6.1


PACKAGE INSTALLATION

    o	Fortran code in packages is no longer compiled with -Wall, as
	this is not done on other platforms.


OTHERS

    o	The canvas used when plotting on a jpeg() or bmp() device with
	a transparent background (most often by copying from a screen
	device with the default transparent background) is now white
	and not grey.

    o	It seems file.access() can be unreliable both ways: that is it
	can also report that access is barred when it is not.
	(Seen on network file systems.)  So install.packages() to a