@@ -31,7 +31,7 @@
    See the file COPYLIB.TXT for details.
 */
 
-/* Copyright (C) 2004 	The R Foundation
+/* Copyright (C) 2004-8  The R Foundation
 
    Changes for R:
 
@@ -1051,7 +1051,7 @@ void changescrollbar(scrollbar obj, int where, int max, int pagesize)
 	SetScrollInfo(hwnd, SB_CTL, &si, 1);
 }
 
-listbox newlistbox(const char *list[], rect r, scrollfn fn)
+listbox newlistbox(const char *list[], rect r, scrollfn fn, actionfn dble)
 {
 	listbox obj;
 
@@ -1063,13 +1063,14 @@ listbox newlistbox(const char *list[], rect r, scrollfn fn)
 		return obj;
 	obj->kind = ListboxObject;
 	obj->hit = fn;
+	obj->dble = dble;
 
 	changelistbox(obj, list);
 
 	return obj;
 }
 
-listbox newmultilist(const char *list[], rect r, scrollfn fn)
+listbox newmultilist(const char *list[], rect r, scrollfn fn, actionfn dble)
 {
 	listbox obj;
 
@@ -1083,6 +1084,7 @@ listbox newmultilist(const char *list[], rect r, scrollfn fn)
 		return obj;
 	obj->kind = MultilistObject;
 	obj->hit = fn;
+	obj->dble = dble;
 
 	changelistbox(obj, list);
 
@@ -1282,14 +1284,22 @@ void handle_control(HWND hwnd, UINT message)
 		break;
 
 	  case ListboxObject:
+	      if (message == LBN_DBLCLK) {
+		  if(obj->dble) obj->dble(obj);
+		  return;
+	      }
 		/* Ignore all but selection-change events. */
-		if (message != LBN_SELCHANGE)
-			return;
+	        if (message != LBN_SELCHANGE) return;
+	      
 		index = sendmessage(hwnd, LB_GETCURSEL, 0, 0L);
 		obj->value = index;
 		break;
 
 	  case MultilistObject:
+	      if (message == LBN_DBLCLK) {
+		  if(obj->dble) obj->dble(obj);
+		  return;
+	      }
 		/* Ignore all but selection-change events. */
 		if (message != LBN_SELCHANGE)
 			return;
